# start-template-tale

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
game/: CMakeLists.txt
game/src/: main.cpp
